# PHI-Guard-Intelligence

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  requirements.txt
apps/scanner/: Dockerfile  pyproject.toml  requirements-dev.txt
apps/scanner/phi_guard_scanner/: __init__.py  cli.py  demo.py  importers.py  models.py
apps/scanner/phi_guard_scanner/agent/: __init__.py  contracts.py  runner.py
apps/scanner/phi_guard_scanner/agent/connectors/: cloud.py  files.py  postgres.py  sql_databases.py
apps/scanner/phi_guard_scanner/classifiers/: __init__.py  patterns.py  schema_classifier.py
apps/scanner/phi_guard_scanner/rules/: __init__.py  risk_rules.py
apps/web/: Dockerfile  index.html  package.json  vite.config.ts
demo-data/: README.md
demo-data/sql/: 001_northstar_demo.sql
docs/: architecture.md  business-compliance.md  data-model.md  de-identification-readiness.md  demo-script.md  deployment.md  github-launch-plan.md  hipaa-control-map.md  market-positioning.md  no-raw-phi-storage.md  real-client-readiness.md  risk-scoring.md  sales-one-pager.md  scanner-agent.md  secure-upload-pipeline.md  self-hosted-mode.md  technical-brief.md  threat-model.md
infra/postgres/: 001_metadata_store.sql
presentations/: README.md  phi-guard-intelligence-buyer-deck.html  phi-guard-intelligence-buyer-deck.md
reports/: sample-executive-report.html
tests/unit/: test_api_contract.py  test_demo_scan.py  test_importers.py  test_scanner_agent.py  test_schema_classifier.py
(+9 files in other folders)
