[project]
name = "phi-guard-scanner"
version = "0.1.0"
description = "Metadata-first healthcare PHI risk scanner and rule engine."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2.0"]
mysql = ["pymysql>=1.1.1"]
sqlserver = ["pyodbc>=5.2.0"]
cloud = ["boto3>=1.34.0", "azure-storage-blob>=12.20.0", "google-cloud-storage>=2.17.0"]
agent = ["psycopg[binary]>=3.2.0"]

[tool.pytest.ini_options]
pythonpath = ["apps/scanner"]
testpaths = ["tests/unit"]
